# smgrep

./: .smignore.example  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.claude-plugin/: marketplace.json
.rsgrep/: server.json
examples/: format_chunk_text_demo.rs  format_demo.rs
plugins/rsgrep/: hooks.json
plugins/rsgrep/.claude-plugin/: plugin.json
plugins/rsgrep/hooks/: start.sh  stop.sh
plugins/rsgrep/skills/rsgrep/: SKILL.md
src/: config.rs  error.rs  git.rs  ipc.rs  lib.rs  main.rs  meta.rs  serde_arc_pathbuf.rs  sstr.rs  sync.rs  types.rs  util.rs  version.rs
src/chunker/: anchor.rs  mod.rs  treesitter.rs
src/cmd/: claude_install.rs  doctor.rs  index.rs  list.rs  mcp.rs  mod.rs  search.rs  serve.rs  setup.rs  status.rs  stop.rs  stop_all.rs
src/commands/: doctor.rs  index.rs  install_claude.rs  list.rs  mod.rs  search.rs  serve.rs  setup.rs
src/embed/: candle.rs  mod.rs  worker.rs
src/file/: discovery.rs  ignore.rs  mod.rs  watcher.rs
src/format/: json.rs  mod.rs  text.rs
src/grammar/: mod.rs
src/search/: mod.rs  ranking.rs
src/store/: lance.rs  mod.rs
src/usock/: mod.rs  tcp.rs  unix.rs
tests/: chunker_test.rs  format_chunk_text_test.rs
