[package]
name = "rsgrep"
version = "0.1.0"
edition = "2024"
description = "Semantic code search tool - Rust port of osgrep"
license = "MIT"
repository = "https://github.com/kris-hansen/osgrep"

[[bin]]
name = "rsgrep"
path = "src/main.rs"

[features]
default = ["cuda"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# ML inference
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = "0.22"
hf-hub = "0.4"

# Vector database
lancedb = "0.22"
arrow-array = "56.2.0"
arrow-schema = "56.2.0"
arrow-arith = "56.2.0"
arrow-buffer = "56.2.0"
arrow-cast = "56.2.0"
arrow-csv = "56.2.0"
arrow-data = "56.2.0"
arrow-ipc = "56.2.0"
arrow-json = "56.2.0"
arrow-ord = "56.2.0"
arrow-pyarrow = "56.2.0"
arrow-row = "56.2.0"
arrow-select = "56.2.0"
arrow-string = "56.2.0"
chrono = "0.4.42"

tree-sitter = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-go = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-yaml = "0.7"
tree-sitter-json = "0.24"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-ruby = "0.23.1"
tree-sitter-php = "0.24.2"
tree-sitter-swift = "0.7.1"
tree-sitter-html = "0.23.2"
tree-sitter-css = "0.25.0"
tree-sitter-bash = "0.25.0"
tree-sitter-lua = "0.2.0"
tree-sitter-elixir = "0.3.4"
tree-sitter-haskell = "0.23.1"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-zig = "1.1.2"
tree-sitter-nix = "0.3.0"
tree-sitter-r = "1.2.0"
tree-sitter-julia = "0.23.1"
tree-sitter-erlang = "0.15.0"
tree-sitter-clojure = "0.1.0"
tree-sitter-commonlisp = "0.4.1"
tree-sitter-racket = "0.24.7"
tree-sitter-asm = "0.24.0"

# File system
ignore = "0.4"
notify = "8.2"
notify-debouncer-mini = "0.7"
walkdir = "2"

# Git
git2 = "0.20"

# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json"] }

# Utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
rayon = "1"
indicatif = "0.18"
console = "0.16"
syntect = "5"
directories = "6"
once_cell = "1"
bytes = "1"
futures = "0.3"
async-trait = "0.1"
crossbeam-channel = "0.5"
num_cpus = "1"
hex = "0.4"
regex = "1"
rustc_version_runtime = "0.3"
is-terminal = "0.4"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[profile.release]
lto = "thin"
codegen-units = 8
opt-level = 2
strip = "none"
debug = "line-tables-only"
split-debuginfo = "packed"

[profile.dev]
incremental = true
codegen-units = 256
strip = "none"
debug = "line-tables-only"

[profile.test]
inherits = "dev"
