[package]
name = "smgrep"
version = "0.3.0"
edition = "2024"
description = "Semantic code search tool with GPU acceleration - Rust port of osgrep"
license = "Apache-2.0"
repository = "https://github.com/can1357/smgrep"
homepage = "https://github.com/can1357/smgrep"
documentation = "https://github.com/can1357/smgrep"
readme = "README.md"
keywords = ["search", "semantic", "code", "grep", "embeddings"]
categories = ["command-line-utilities", "development-tools", "text-processing"]
authors = ["Can Bölük <me@can.ac>"]
rust-version = "1.85"

[[bin]]
name = "smgrep"
path = "src/main.rs"

[features]
default = ["cuda"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# ML inference
candle-core = "0.9.2-alpha.1"
candle-nn = "0.9.2-alpha.1"
candle-transformers = "0.9.2-alpha.1"
tokenizers = "0.22"
hf-hub = "0.4"

# Vector database
lancedb = "0.22"
arrow-array = "56.2.0"
arrow-schema = "56.2.0"
arrow-arith = "56.2.0"
arrow-buffer = "56.2.0"
arrow-cast = "56.2.0"
arrow-csv = "56.2.0"
arrow-data = "56.2.0"
arrow-ipc = "56.2.0"
arrow-json = "56.2.0"
arrow-ord = "56.2.0"
arrow-pyarrow = "56.2.0"
arrow-row = "56.2.0"
arrow-select = "56.2.0"
arrow-string = "56.2.0"
chrono = "0.4.42"

tree-sitter = { version = "0.25", features = ["wasm"] }

# File system
ignore = "0.4"
notify = "8.2"
notify-debouncer-mini = "0.7"
walkdir = "2"

# Git & Networking
git2 = "0.20"
reqwest = { version = "0.12", features = ["json"] }

# IPC
postcard = { version = "1", features = ["alloc"] }

# Utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
figment = { version = "0.10", features = ["toml", "env"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
rayon = "1"
indicatif = "0.18"
console = "0.16"
syntect = "5"
directories = "6"
once_cell = "1"
bytes = "1"
futures = "0.3"
async-trait = "0.1"
crossbeam-channel = "0.5"
num_cpus = "1"
hex = "0.4"
regex = "1"
rustc_version_runtime = "0.3"
is-terminal = "0.4"
smallvec = "1.15.1"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[profile.release]
lto = "thin"
codegen-units = 8
opt-level = 2
strip = "none"
debug = "line-tables-only"
split-debuginfo = "packed"

[profile.dev]
incremental = true
codegen-units = 256
strip = "none"
debug = "line-tables-only"

[profile.test]
inherits = "dev"
